trying to fix text overflow

--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -50,7 +50,8 @@ button:hover {
     height: 100%;
     width: 25%;
     text-overflow: ellipsis;
-    
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .popover {
